Fix CSS to make code snippets visible

--- a/src/main/sass/spring/_layout.scss
+++ b/src/main/sass/spring/_layout.scss
@@ -261,7 +261,7 @@ pre.highlight {
   border: 1px solid #d9d9d9;
   overflow-x: scroll;
   code {
-    color: #222;
+    color: #eee;
   }
   color: #222;
 }
